[tool.poetry]
name = "my-first-django-project"
version = "1.0.0"
description = "My introduction to web development."
readme = "README.md"
authors = [ "Vanessa Mohr <vanessa.mohr@entelect.co.za>" ]
license = "LICENSE"
packages = [ { include = "mysite" } ]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
django = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
djangogirls = "mysite.main:main"
